--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@
   top: 80px;
   left: 240px;
 }
+
 .owl-theme .owl-dots .owl-dot span {
   width: 400px;
   background: brown;
@@ -305,9 +306,13 @@ ul {
   align-items: center;
   margin: 0 auto;
 }
-
+.three_watchs_it:hover {
+  transition: 1s;
+  transform: scale(1.05);
+}
 .three_watchs_it {
-  height: 100%;
+  position: relative;
+  /* height: 100%; */
   width: 100%;
   display: flex;
   align-items: center;
@@ -317,6 +322,27 @@ ul {
   border-radius: 22px;
   margin: 386px 0 135px;
   background-color: #f5f5f5;
+  transition: 1.5s;
+  z-index: 3;
+}
+.three_watchs_it::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0px;
+  right: 2px;
+  transform: scale(0);
+  background-color: #08e03e;
+  transition: 1.5s;
+}
+.three_watchs_it:hover::after {
+  background-color: #08dfee;
+  height: 273px;
+  width: 354px;
+  border-radius: 20px;
+  z-index: -1;
+  transition: 1.5s;
+  transform: scale(1);
 }
 .watch_1 {
   width: 100%;
